--- a/composer.json
+++ b/composer.json
@@ -75,5 +75,7 @@
         "allow-plugins": {
             "php-http/discovery": true
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
